[workspace]
resolver = "3"
members = ["turbine-ebpf-spy", "turbine-forwarder", "udp-receiver", "udp-spammer"]
default-members = ["turbine-forwarder"]

[workspace.dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya.git" }
network-types = "0.1.0"
solana-packet = "2.2.1"
arrayvec = { version = "0.7.6", default-features = false }
aya = { git = "https://github.com/aya-rs/aya.git" }
aya-build = { git = "https://github.com/aya-rs/aya.git" } 
anyhow = "1.0.100"
futures = "0.3.31"

[profile.release.package.turbine-ebpf-spy]
debug = 2
codegen-units = 1
